project/test/semantics/bad/input/Bad57_shouldThrowArgumentListInvalidErrorIfArgAndParamListsOfDifferentLengths.ty
singleton class SystemTest {
    
    actions: {
        someAction: () -> Void = Pass
        
        otherAction: (x: Int) -> Int = {
            Pass
            2 * x
        }
        
        main: () -> Void = {
            SystemTest#otherAction(3, 3)
            // System#print(3)
            this#someAction()
        }
    }
}
